--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -22,7 +22,7 @@ modId="europa_shockwave_mod" #mandatory
 # The version number of the mod
 version="1.0.32" #mandatory
 # A display name for the mod
-displayName="KijinMOD" #mandatory
+displayName="EuropaShockwaveMOD" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://docs.minecraftforge.net/en/latest/misc/updatechecker/
 #updateJSONURL="https://change.me.example.invalid/updates.json" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
